# src/app.ts
@@ -8,6 +8,7 @@ import { entryService } from './services';
 import blockRouter from './routes/blockRouter';
 import entryRouter from './routes/entryRouter';
 import resourceRouter from './routes/resourceRouter';
+import resourceCategoryRouter from './routes/resourceCategoryRouter';
 import uploadRouter from './routes/uploadRouter';
 import errorRouter from './routes/errorRouter';
 import migrationRouter from './routes/migrationRouter';
@@ -185,6 +186,7 @@ app.route('/', legacyRouter);
 app.route('/blocks', blockRouter);
 app.route('/entries', entryRouter);
 app.route('/resources', resourceRouter);
+app.route('/resource-categories', resourceCategoryRouter);
 app.route('/upload', uploadRouter);
 app.route('/errors', errorRouter);
 app.route('/metrics', metricsRouter);
